@@ -45,6 +45,7 @@
 static char *	_dump_all_nodes(int *node_cnt, time_t update_time);
 static char *	_dump_node(struct node_record *node_ptr, hostlist_t hl,
 			   time_t update_time);
+static bool	_hidden_node(struct node_record *node_ptr);
 static char *	_get_node_state(struct node_record *node_ptr);
 static int	_same_info(struct node_record *node1_ptr,
 			   struct node_record *node2_ptr, time_t update_time);
@@ -118,6 +119,8 @@ extern int	get_nodes(char *cmd_ptr, int *err_code, char **err_msg)
 					      node_name);
 					continue;
 				}
+				if (_hidden_node(node_ptr))
+					continue;
 				tmp_buf = _dump_node(node_ptr, NULL,
 						     update_time);
 				if (node_rec_cnt > 0)
@@ -160,6 +163,8 @@ static char *	_dump_all_nodes(int *node_cnt, time_t update_time)
 		if (node_ptr->name == NULL)
 			continue;
 		if (IS_NODE_FUTURE(node_ptr))
+			continue;
+		if (_hidden_node(node_ptr))
 			continue;
 		if (use_host_exp == 2) {
 			rc = _same_info(uniq_node_ptr, node_ptr, update_time);
@@ -427,4 +432,33 @@ static int	_str_cmp(char *s1, char *s2)
 
 	/* One pointer is valid and the other is NULL */
 	return 1;
+}
+
+/* Return true if the node exists in a hidden partition and not in any
+ * non-hidden partitions. */
+static bool	_hidden_node(struct node_record *node_ptr)
+{
+	int i, n;
+	int hidden = -1;	/* node is hidden for some partition */
+	int shown = -1;		/* node is *not* hidden for some partition */
+
+	for (n = 0; n < node_ptr->part_cnt; n++) {
+		bool hide_found = false;
+		for (i=0; i<HIDE_PART_CNT; i++) {
+			if (hide_part_nodes_ptr[i] == NULL)
+				break;
+			if (hide_part_nodes_ptr[i] == node_ptr->part_pptr[n]) {
+				hide_found = true;
+				break;
+			}
+		}
+		if (hide_found)
+			hidden = 1;
+		else
+			shown = 1;
+	}
+
+	if ((hidden == 1) && (shown != 1))
+		return true;
+	return false;
 }
